fix:add the support page

--- a/overrides/blog_list.html
+++ b/overrides/blog_list.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %}
 {% block announce %}
     <div class="announce-wrapper">
-        <p>Вы также можете поддержать развитие проекта</p>
-        <a href="blog/support/">Поддержка</a>
+        <p>Вы также можете <a href="blog/support/">поддержать</a> развитие проекта</p>
     </div>
 {% endblock %}
 {% block content %}
