--- a/overrides/blog_list.html
+++ b/overrides/blog_list.html
@@ -1,21 +1,24 @@
 {% extends "base.html" %}
-  {% block announce %}
-<p>Вы также можете подписаться на наши социальные сети в <a href="https://t.me/spk55omsk">Телеграм</a> и в <a href="https://vk.com/spkomsk55">Вконтакте</a></p>
-  {% endblock %}
+{% block announce %}
+<p>Вы также можете подписаться на наши социальные сети в <a href="https://t.me/spk55omsk">Телеграм</a> и в <a
+    href="https://vk.com/spkomsk55">Вконтакте</a></p>
+{% endblock %}
 {% block content %}
-  {{ page.content }}
-  {% set blog_posts = [] %}
-  {% for page in nav.pages %}
-    {% if page.url.startswith(config.extra.blog.dir) and page.meta.date is defined %}
-      <!-- or "" suppresses "None" output-->
-      {{ blog_posts.append( page ) or "" }}
-    {% endif %}
-  {% endfor %}
+{{ page.content }}
+{% set blog_posts = [] %}
+{% for page in nav.pages %}
+{% if page.url.startswith(config.extra.blog.dir) and page.meta.date is defined %}
+<!-- or "" suppresses "None" output-->
+{{ blog_posts.append( page ) or "" }}
+{% endif %}
+{% endfor %}
 
-  {% for page in (blog_posts|sort(attribute="meta.date", reverse=True))[:config.extra.blog.list_length] %}
-      <h2><a href="{{ page.url|url }}">{{ page.title }}</a></h2>
-      <p>
-        <b>{{ page.meta.description }}</b>
-      </p>
-  {% endfor %}
+{% for page in (blog_posts|sort(attribute="meta.date", reverse=True))[:config.extra.blog.list_length] %}
+<h2><a href="{{ page.url|url }}">{{ page.title }}</a></h2>
+<p>
+  <b>{{ page.meta.description }}</b>
+</p>
+
+<hr>
+{% endfor %}
 {% endblock %}
